--- a/templates/index.html
+++ b/templates/index.html
@@ -119,14 +119,14 @@
                         <h3>Churn-Modelling</h3>
                         <h3>Project7</h3>
                         <br>
-                        <h4>Developed By Lakshay Tanwani</h4>
+                        <h4>Developed By Kritika Tiwari</h4>
                         
                     </div>
                     <div class="col-md-9 register-right">
                         
                         <div class="tab-content" id="myTabContent">
                             <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-                                <h3 class="register-heading">Prediction Using All Models</h3>
+                                <h3 class="register-heading">Prediction Using Decision tree, KNN, SVM, Random Forest and Naive Bayes</h3>
                                 <div class="row register-form">
                                     <div class="col-md-6">
                                         <div class="form-group">
