--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-
+<!doctype html>
 <html>
 <head>
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
@@ -119,7 +119,7 @@
                         <h3>Churn-Modelling</h3>
                         <h3>Project7</h3>
                         <br>
-                        <h4>Developed By Lakshay Tanwani</h4>
+                        <h4>Developed By Kritika Tiwari</h4>
                         
                     </div>
                     <div class="col-md-9 register-right">
