--- a/templates/index.html
+++ b/templates/index.html
@@ -148,7 +148,7 @@
                 </select>
             </div>
 
-            <div class="col-md-4" style="color:;">black
+            <div class="col-md-4" style="color:black;">
                 <label for="inputState" class="form-label">Choose a Model</label>
                 <select id="Model" name ="Model" step = "any" class="form-select" required>
                     <option selected>Random Forest Classifier</option>
